--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vim/bundle/Pydiction"]
 	path = vim/bundle/Pydiction
 	url = git://github.com/vim-scripts/Pydiction.git
+[submodule "emacs/emacs.d/plugin/pony-mode"]
+	path = emacs/emacs.d/plugin/pony-mode
+	url = git://github.com/davidmiller/pony-mode.git
