--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "emacs/emacs.d/plugin/yasnippet"]
 	path = emacs/emacs.d/plugin/yasnippet
 	url = git://github.com/capitaomorte/yasnippet.git
+[submodule "emacs/emacs.d/syntax/markdown-mode"]
+	path = emacs/emacs.d/syntax/markdown-mode
+	url = git://jblevins.org/git/markdown-mode.git
+[submodule "emacs/emacs.d/lang/coffee-mode"]
+	path = emacs/emacs.d/lang/coffee-mode
+	url = git://github.com/defunkt/coffee-mode.git
