--- a/ubuntu/Makefile
+++ b/ubuntu/Makefile
@@ -1,7 +1,6 @@
-install: add-repositories
+install: repositories
 	echo "starting to install..."
 
-add-repositories:
-	add-apt-repository ppa:uwsgi/release
+repositories:
 	add-apt-repository ppa:nginx/stable
 	wget -q http://download.virtualbox.org/virtualbox/debian/oracle_vbox.asc -O- | sudo apt-key add -
