--- a/ubuntu/Makefile
+++ b/ubuntu/Makefile
@@ -1,6 +1,9 @@
 install: repositories
 	echo "starting to install..."
 
-repositories:
+repositories: prefix
 	add-apt-repository ppa:nginx/stable
 	wget -q http://download.virtualbox.org/virtualbox/debian/oracle_vbox.asc -O- | sudo apt-key add -
+
+prefix:
+	apt-get install python-software-properties
