--- a/.gitmodules
+++ b/.gitmodules
@@ -15,7 +15,7 @@
 	url = git://github.com/capitaomorte/yasnippet.git
 [submodule "emacs/emacs.d/syntax/markdown-mode"]
 	path = emacs/emacs.d/syntax/markdown-mode
-	url = git://jblevins.org/git/markdown-mode.git
+	url = git://github.com/defunkt/markdown-mode.git
 [submodule "emacs/emacs.d/lang/coffee-mode"]
 	path = emacs/emacs.d/lang/coffee-mode
 	url = git://github.com/defunkt/coffee-mode.git
