fix puppet-syntax-emacs module

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,6 +25,6 @@
 [submodule "emacs/emacs.d/syntax/yaml-mode"]
 	path = emacs/emacs.d/syntax/yaml-mode
 	url = git://github.com/yoshiki/yaml-mode.git
-[submodule ".\\emacs\\emacs.d\\syntax\\puppet-syntax-emacs"]
-	path = .\\emacs\\emacs.d\\syntax\\puppet-syntax-emacs
+[submodule "emacs/emacs.d/syntax/puppet-syntax-emacs"]
+	path = emacs/emacs.d/syntax/puppet-syntax-emacs
 	url = git://github.com/puppetlabs/puppet-syntax-emacs.git
